Scores on math, science, writting and humanities added to import csv and to ORM class

--- a/Python/ENEM Analysis/ENEM - Brazil.ipynb
+++ b/Python/ENEM Analysis/ENEM - Brazil.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,9 +37,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inserted: 20000\n",
+      "Inserted: 40000\n",
+      "Inserted: 60000\n",
+      "Inserted: 80000\n",
+      "Inserted: 100000\n",
+      "Inserted: 120000\n",
+      "Inserted: 140000\n",
+      "Inserted: 160000\n",
+      "Inserted: 180000\n",
+      "Inserted: 200000\n",
+      "Inserted: 220000\n",
+      "Inserted: 240000\n",
+      "Inserted: 260000\n",
+      "Inserted: 280000\n",
+      "Inserted: 300000\n",
+      "Inserted: 320000\n",
+      "Inserted: 340000\n",
+      "Inserted: 360000\n",
+      "Inserted: 380000\n",
+      "Inserted: 400000\n",
+      "Inserted: 420000\n",
+      "Inserted: 440000\n",
+      "Inserted: 460000\n",
+      "Inserted: 480000\n",
+      "Inserted: 500000\n",
+      "Inserted: 520000\n",
+      "Inserted: 540000\n",
+      "Inserted: 560000\n",
+      "Inserted: 580000\n",
+      "Inserted: 600000\n",
+      "Inserted: 620000\n",
+      "Inserted: 640000\n",
+      "Inserted: 660000\n",
+      "Inserted: 680000\n",
+      "Inserted: 700000\n",
+      "Inserted: 720000\n",
+      "Inserted: 740000\n",
+      "Inserted: 760000\n",
+      "Inserted: 780000\n",
+      "Inserted: 800000\n",
+      "Inserted: 820000\n",
+      "Inserted: 840000\n",
+      "Inserted: 860000\n",
+      "Inserted: 880000\n",
+      "Inserted: 900000\n",
+      "Inserted: 920000\n",
+      "Inserted: 940000\n",
+      "Inserted: 960000\n",
+      "Inserted: 980000\n",
+      "Inserted: 1000000\n",
+      "Inserted: 1020000\n",
+      "Inserted: 1040000\n",
+      "Inserted: 1060000\n",
+      "Inserted: 1080000\n",
+      "Inserted: 1100000\n",
+      "Inserted: 1120000\n",
+      "Inserted: 1140000\n",
+      "Inserted: 1160000\n",
+      "Inserted: 1180000\n",
+      "Inserted: 1200000\n",
+      "Inserted: 1220000\n",
+      "Inserted: 1240000\n",
+      "Inserted: 1260000\n",
+      "Inserted: 1280000\n",
+      "Inserted: 1300000\n",
+      "Inserted: 1320000\n",
+      "Inserted: 1340000\n",
+      "Inserted: 1360000\n",
+      "Inserted: 1380000\n",
+      "Inserted: 1400000\n",
+      "Inserted: 1420000\n",
+      "Inserted: 1440000\n",
+      "Inserted: 1460000\n",
+      "Inserted: 1480000\n",
+      "Inserted: 1500000\n",
+      "Inserted: 1520000\n",
+      "Inserted: 1540000\n",
+      "Inserted: 1560000\n",
+      "Inserted: 1580000\n",
+      "Inserted: 1600000\n",
+      "Inserted: 1620000\n",
+      "Inserted: 1640000\n",
+      "Inserted: 1660000\n",
+      "Inserted: 1680000\n",
+      "Inserted: 1700000\n",
+      "Inserted: 1720000\n",
+      "Inserted: 1740000\n",
+      "Inserted: 1760000\n",
+      "Inserted: 1780000\n",
+      "Inserted: 1800000\n",
+      "Inserted: 1820000\n",
+      "Inserted: 1840000\n",
+      "Inserted: 1860000\n",
+      "Inserted: 1880000\n",
+      "Inserted: 1900000\n",
+      "Inserted: 1920000\n",
+      "Inserted: 1940000\n",
+      "Inserted: 1960000\n",
+      "Inserted: 1980000\n",
+      "Inserted: 2000000\n",
+      "Inserted: 2020000\n",
+      "Inserted: 2040000\n",
+      "Inserted: 2060000\n",
+      "Inserted: 2080000\n",
+      "Inserted: 2100000\n",
+      "Inserted: 2120000\n",
+      "Inserted: 2140000\n",
+      "Inserted: 2160000\n",
+      "Inserted: 2180000\n",
+      "Inserted: 2200000\n",
+      "Inserted: 2220000\n",
+      "Inserted: 2240000\n",
+      "Inserted: 2260000\n",
+      "Inserted: 2280000\n",
+      "Inserted: 2300000\n",
+      "Inserted: 2320000\n",
+      "Inserted: 2340000\n",
+      "Inserted: 2360000\n",
+      "Inserted: 2380000\n",
+      "Inserted: 2400000\n",
+      "Inserted: 2420000\n",
+      "Inserted: 2440000\n",
+      "Inserted: 2460000\n",
+      "Inserted: 2480000\n",
+      "Inserted: 2500000\n",
+      "Inserted: 2520000\n",
+      "Inserted: 2540000\n",
+      "Inserted: 2560000\n",
+      "Inserted: 2580000\n",
+      "Inserted: 2600000\n",
+      "Inserted: 2620000\n",
+      "Inserted: 2640000\n",
+      "Inserted: 2660000\n",
+      "Inserted: 2680000\n",
+      "Inserted: 2700000\n",
+      "Inserted: 2720000\n",
+      "Inserted: 2740000\n",
+      "Inserted: 2760000\n",
+      "Inserted: 2780000\n",
+      "Inserted: 2800000\n",
+      "Inserted: 2820000\n",
+      "Inserted: 2840000\n",
+      "Inserted: 2860000\n",
+      "Inserted: 2880000\n",
+      "Inserted: 2900000\n",
+      "Inserted: 2920000\n",
+      "Inserted: 2940000\n",
+      "Inserted: 2960000\n",
+      "Inserted: 2980000\n",
+      "Inserted: 3000000\n",
+      "Inserted: 3020000\n",
+      "Inserted: 3040000\n",
+      "Inserted: 3060000\n",
+      "Inserted: 3080000\n",
+      "Inserted: 3100000\n",
+      "Inserted: 3120000\n",
+      "Inserted: 3140000\n",
+      "Inserted: 3160000\n",
+      "Inserted: 3180000\n",
+      "Inserted: 3200000\n",
+      "Inserted: 3220000\n",
+      "Inserted: 3240000\n",
+      "Inserted: 3260000\n",
+      "Inserted: 3280000\n",
+      "Inserted: 3300000\n",
+      "Inserted: 3320000\n",
+      "Inserted: 3340000\n",
+      "Inserted: 3360000\n",
+      "Inserted: 3380000\n",
+      "Inserted: 3400000\n",
+      "Inserted: 3420000\n",
+      "Inserted: 3440000\n",
+      "Inserted: 3460000\n",
+      "Inserted: 3480000\n",
+      "Inserted: 3500000\n",
+      "Inserted: 3520000\n",
+      "Inserted: 3540000\n",
+      "Inserted: 3560000\n",
+      "Inserted: 3580000\n",
+      "Inserted: 3600000\n",
+      "Inserted: 3620000\n",
+      "Inserted: 3640000\n",
+      "Inserted: 3660000\n",
+      "Inserted: 3680000\n",
+      "Inserted: 3700000\n",
+      "Inserted: 3720000\n",
+      "Inserted: 3740000\n",
+      "Inserted: 3760000\n",
+      "Inserted: 3780000\n",
+      "Inserted: 3800000\n",
+      "Inserted: 3820000\n",
+      "Inserted: 3840000\n",
+      "Inserted: 3860000\n",
+      "Inserted: 3880000\n",
+      "Inserted: 3900000\n",
+      "Inserted: 3920000\n",
+      "Inserted: 3940000\n",
+      "Inserted: 3960000\n",
+      "Inserted: 3980000\n",
+      "Inserted: 4000000\n",
+      "Inserted: 4020000\n",
+      "Inserted: 4040000\n",
+      "Inserted: 4060000\n",
+      "Inserted: 4080000\n",
+      "Inserted: 4100000\n",
+      "Inserted: 4120000\n",
+      "Inserted: 4140000\n",
+      "Inserted: 4160000\n",
+      "Inserted: 4180000\n",
+      "Inserted: 4200000\n",
+      "Inserted: 4220000\n",
+      "Inserted: 4240000\n",
+      "Inserted: 4260000\n",
+      "Inserted: 4280000\n",
+      "Inserted: 4300000\n",
+      "Inserted: 4320000\n",
+      "Inserted: 4340000\n",
+      "Inserted: 4360000\n",
+      "Inserted: 4380000\n",
+      "Inserted: 4400000\n",
+      "Inserted: 4420000\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import os.path\n",
@@ -49,57 +277,72 @@
     "with open(csv_path,'r') as f:\n",
     "    reader = csv.reader(f)\n",
     "    header = next(reader)[0].split(';')\n",
-    "    for i in range(0,100):\n",
-    "        values = next(reader)[0].split(';')\n",
+    "    counter = 0\n",
+    "    for row in reader:\n",
+    "        values = row[0].split(';')\n",
     "        items = dict(zip(header,values))\n",
     "        \n",
     "        for key in items.keys():\n",
     "            if items[key]=='':\n",
     "                items[key]=None\n",
-    "        \n",
-    "        exame = db.Exame()\n",
-    "        exame.candidato_id = int(items['NU_INSCRICAO']) \n",
-    "        exame.ano = int(items['NU_ANO']) if items['NU_ANO'] else None\n",
-    "        exame.idade = int(items['NU_IDADE']) if items['NU_IDADE'] else None\n",
-    "        exame.racial_id = int(items['TP_COR_RACA']) if items['TP_COR_RACA'] else None\n",
-    "        exame.sexo = items['TP_SEXO']\n",
-    "        \n",
-    "        \n",
-    "        if items['CO_MUNICIPIO_PROVA']:\n",
-    "            if not session.query(db.Local).filter_by(id=int(items['CO_MUNICIPIO_PROVA'])).all():\n",
-    "                local = db.Local()\n",
-    "                local.id = int(items['CO_MUNICIPIO_PROVA'])\n",
-    "                local.municipio = items['NO_MUNICIPIO_PROVA']\n",
-    "                local.estado = items['SG_UF_PROVA']\n",
-    "                session.add(local)\n",
-    "                session.commit()\n",
-    "            exame.exame_local_id = int(items['CO_MUNICIPIO_PROVA']) \n",
+    "                \n",
+    "        #checks if the person finished the exam, those who did not finish will be discarded\n",
+    "        if items['NU_NOTA_CN'] and items['NU_NOTA_CH'] and items['NU_NOTA_LC'] and items['NU_NOTA_MT'] and items['NU_NOTA_REDACAO']:\n",
+    "            exame = db.Exame()\n",
+    "            exame.candidato_id = int(items['NU_INSCRICAO']) \n",
+    "            exame.ano = int(items['NU_ANO']) if items['NU_ANO'] else None\n",
+    "            exame.idade = int(items['NU_IDADE']) if items['NU_IDADE'] else None\n",
+    "            exame.racial_id = int(items['TP_COR_RACA']) if items['TP_COR_RACA'] else None\n",
+    "            exame.sexo = items['TP_SEXO']\n",
+    "            exame.casado_id = int(items['TP_ESTADO_CIVIL']) if items['TP_ESTADO_CIVIL'] else None\n",
+    "            exame.nacional_id = int(items['TP_NACIONALIDADE']) if items['TP_NACIONALIDADE'] else None\n",
+    "            exame.nota_cn = float(items['NU_NOTA_CN'])\n",
+    "            exame.nota_ch = float(items['NU_NOTA_CH'])\n",
+    "            exame.nota_lc = float(items['NU_NOTA_LC'])\n",
+    "            exame.nota_mt = float(items['NU_NOTA_MT']) \n",
+    "            exame.nota_red = float(items['NU_NOTA_REDACAO']) \n",
+    "\n",
+    "\n",
+    "            if items['CO_MUNICIPIO_PROVA']:\n",
+    "                if not session.query(db.Local).filter_by(id=int(items['CO_MUNICIPIO_PROVA'])).all():\n",
+    "                    local = db.Local()\n",
+    "                    local.id = int(items['CO_MUNICIPIO_PROVA'])\n",
+    "                    local.municipio = items['NO_MUNICIPIO_PROVA']\n",
+    "                    local.estado = items['SG_UF_PROVA']\n",
+    "                    session.add(local)\n",
+    "                    session.commit()\n",
+    "                exame.exame_local_id = int(items['CO_MUNICIPIO_PROVA']) \n",
+    "\n",
+    "\n",
+    "            if items['CO_MUNICIPIO_NASCIMENTO']:\n",
+    "                if not session.query(db.Local).filter_by(id=int(items['CO_MUNICIPIO_NASCIMENTO'])).all():\n",
+    "                    local = db.Local()\n",
+    "                    local.id = int(items['CO_MUNICIPIO_NASCIMENTO'])\n",
+    "                    local.municipio = items['NO_MUNICIPIO_NASCIMENTO']\n",
+    "                    local.estado = items['SG_UF_NASCIMENTO']\n",
+    "                    session.add(local)\n",
+    "                    session.commit()\n",
+    "                exame.local_nasc_id = int(items['CO_MUNICIPIO_NASCIMENTO'])\n",
+    "\n",
+    "            if items['CO_MUNICIPIO_RESIDENCIA']:\n",
+    "                if not session.query(db.Local).filter_by(id=int(items['CO_MUNICIPIO_RESIDENCIA'])).all():\n",
+    "                    local = db.Local()\n",
+    "                    local.id = int(items['CO_MUNICIPIO_RESIDENCIA'])\n",
+    "                    local.municipio = items['NO_MUNICIPIO_RESIDENCIA']\n",
+    "                    local.estado = items['SG_UF_RESIDENCIA']\n",
+    "                    session.add(local)\n",
+    "                    session.commit()\n",
+    "            exame.residencia_id = int(items['CO_MUNICIPIO_RESIDENCIA'])\n",
+    "\n",
+    "            session.add(exame)\n",
+    "            counter += 1\n",
     "            \n",
-    "            \n",
-    "        if items['CO_MUNICIPIO_NASCIMENTO']:\n",
-    "            if not session.query(db.Local).filter_by(id=int(items['CO_MUNICIPIO_NASCIMENTO'])).all():\n",
-    "                local = db.Local()\n",
-    "                local.id = int(items['CO_MUNICIPIO_NASCIMENTO'])\n",
-    "                local.municipio = items['NO_MUNICIPIO_NASCIMENTO']\n",
-    "                local.estado = items['SG_UF_NASCIMENTO']\n",
-    "                session.add(local)\n",
+    "            if counter%20000 == 0:\n",
     "                session.commit()\n",
-    "            exame.local_nasc_id = int(items['CO_MUNICIPIO_NASCIMENTO'])\n",
-    "        \n",
-    "        if items['CO_MUNICIPIO_RESIDENCIA']:\n",
-    "            if not session.query(db.Local).filter_by(id=int(items['CO_MUNICIPIO_RESIDENCIA'])).all():\n",
-    "                local = db.Local()\n",
-    "                local.id = int(items['CO_MUNICIPIO_RESIDENCIA'])\n",
-    "                local.municipio = items['NO_MUNICIPIO_RESIDENCIA']\n",
-    "                local.estado = items['SG_UF_RESIDENCIA']\n",
-    "                session.add(local)\n",
-    "                session.commit()\n",
-    "        exame.residencia_id = int(items['CO_MUNICIPIO_RESIDENCIA'])\n",
-    "        \n",
-    "        session.add(exame)\n",
-    "        \n",
-    "    session.commit()    #commits to session\n",
-    "    session.close()     #closes session\n"
+    "                print('Inserted: '+str(counter))\n",
+    "\n",
+    "        session.commit()    #commits to session\n",
+    "        session.close()     #closes session\n"
    ]
   },
   {
